Feat: 서버 올렸을 때 오류 잡음